--- a/a-propos.html
+++ b/a-propos.html
@@ -29,7 +29,7 @@
         <section id="about">
             <h1>À propos de moi</h1>
             <div class="contener">
-                <img src="IMG_9476.jpeg" alt="Description de l'image" width="300" class="photo">
+               <!-- <img src="IMG_9476.jpeg" alt="Description de l'image" width="300" class="photo"> -->
                 <p>
                 Je suis <strong> Houleymatou Camara</strong>, étudiante en Licence 2 <strong>Informatique et Mathématiques Appliquées à la Gestion des Entreprises à l'Université de Grenoble Alpes (UGA)</strong>.<br>
 
