--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section id ="accueil">
             <div class="contener">
-                <img src="IMG_9453.jpeg" alt="Description de l'image" width="300" class="photo">
+               <!-- <img src="IMG_9453.jpeg" alt="Description de l'image" width="300" class="photo"> -->
                 <p>Passionnée par le <strong>développement de logiciels et le développement web,</strong> je m'efforce d'acquérir une maîtrise approfondie des technologies modernes telles que <strong> React.js ,Next.js et Tailwind CSS. </strong>
                 Mon objectif est de concevoir des solutions innovantes, performantes et intuitives pour répondre aux besoins des utilisateurs.
                 <br>
