--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
 
             <nav>
+                <div class="logo">Mon Portfolio</div>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="a-propos.html">À propos</a></li>
@@ -22,13 +23,23 @@
                     <li><a href="projets.html">Projets</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <div class="menu-toggle" id="menu-toggle">☰</div>
 
             </nav>
 
     </header>
+    
 
         <h1>HOULEYMATOU CAMARA</h1>
     <main>
+        <script>
+          const toggle = document.getElementById("menu-toggle");
+          const navLinks = document.querySelector(".nav-links");
+        
+          toggle.addEventListener("click", () => {
+            navLinks.classList.toggle("active");
+          });
+    </script>
         <div id="menu-container"></div>
         <section id ="accueil">
             <div class="contener">
