--- a/a-propos.html
+++ b/a-propos.html
@@ -13,6 +13,7 @@
     <header>
         <div class="menu-fixe">
             <nav>
+                <div class="logo">Mon Portfolio</div>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="a-propos.html">À propos</a></li>
@@ -20,11 +21,20 @@
                     <li><a href="projets.html">Projets</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <div class="menu-toggle" id="menu-toggle">☰</div>
                 <!--<div class="menu-toggle" id="menu-toggle">&#9776;</div>-->
             </nav>
         </div>
     </header>
     <main>
+    <script>
+          const toggle = document.getElementById("menu-toggle");
+          const navLinks = document.querySelector(".nav-links");
+        
+          toggle.addEventListener("click", () => {
+            navLinks.classList.toggle("active");
+          });
+    </script>
 
         <section id="about">
             <h1>À propos de moi</h1>
