--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
 <body>
     <header>
             <nav>
+                <div class="logo">Mon Portfolio</div>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="a-propos.html">À propos</a></li>
@@ -21,9 +22,18 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <!--<div class="menu-toggle" id="menu-toggle">&#9776;</div>-->
+                <div class="menu-toggle" id="menu-toggle">☰</div>
             </nav>
     </header>
     <main>
+        <script>
+          const toggle = document.getElementById("menu-toggle");
+          const navLinks = document.querySelector(".nav-links");
+        
+          toggle.addEventListener("click", () => {
+            navLinks.classList.toggle("active");
+          });
+    </script>
         <section id="contact">
             <h1>Contactez-moi</h1>
             <p>Remplissez le formulaire ci-dessous et je vous répondrai dès que possible.</p>
