--- a/projets.html
+++ b/projets.html
@@ -12,6 +12,7 @@
 <body>
     <header>
             <nav>
+                <div class="logo">Mon Portfolio</div>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="a-propos.html">À propos</a></li>
@@ -20,9 +21,18 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <!--<div class="menu-toggle" id="menu-toggle">&#9776;</div>-->
+                <div class="menu-toggle" id="menu-toggle">☰</div>
             </nav>
     </header>
     <main>
+    <script>
+      const toggle = document.getElementById("menu-toggle");
+      const navLinks = document.querySelector(".nav-links");
+    
+      toggle.addEventListener("click", () => {
+        navLinks.classList.toggle("active");
+      });
+</script>
         <h1> Mes Projets</h1>
             <p>Voici quelques projets que j'ai réalisés:</p>
         <div class="container">
