--- a/a-propos.html
+++ b/a-propos.html
@@ -52,6 +52,14 @@
         <a href="https://www.linkedin.com/in/houleymatou-camara-504924284/">Linkedln</a>
         <a href="mailto:houleymatoucamara425@gmail.com">Email</a>
     </footer>
+      <script>
+    const menuHamburger = document.querySelector(".photo")
+    const navLinks = document.querySelector(".nav-links")
+
+    menuHamburger.addEventListener('click',()=>{
+    navLinks.classList.toggle("mobile-menu") 
+    })
+</script>
 
 
 </body>
