--- a/contact.html
+++ b/contact.html
@@ -53,4 +53,12 @@
         <a href="mailto:houleymatoucamara425@gmail.com">Email</a>
         
     </footer>
+      <script>
+    const menuHamburger = document.querySelector(".photo")
+    const navLinks = document.querySelector(".nav-links")
+
+    menuHamburger.addEventListener('click',()=>{
+    navLinks.classList.toggle("mobile-menu") 
+    })
+</script>
 </body>
