--- a/competence.html
+++ b/competence.html
@@ -19,6 +19,7 @@
               <li><a href="projets.html">Projets</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
+            <img src="menu capture.GIF" alt="Description de l'image" width="300" class="photo">
     
           </nav>
     </header>
