--- a/a-propos.html
+++ b/a-propos.html
@@ -11,6 +11,7 @@
 </head>
 <header>
     <nav>
+        <div class="logo">Mon Portfolio</div>
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="a-propos.html">À propos</a></li>
@@ -53,13 +54,13 @@
         <a href="https://www.linkedin.com/in/houleymatou-camara-504924284/">Linkedln</a>
         <a href="mailto:houleymatoucamara425@gmail.com">Email</a>
     </footer>
-      <script>
-    const menuHamburger = document.querySelector(".photo")
-    const navLinks = document.querySelector(".nav-links")
-
-    menuHamburger.addEventListener('click',()=>{
-    navLinks.classList.toggle("mobile-menu") 
-    })
+    <script>
+        const menuHamburger = document.querySelector(".photo")
+        const navLinks = document.querySelector(".nav-links")
+    
+        menuHamburger.addEventListener('click',()=>{
+        navLinks.classList.toggle("mobile-menu") 
+        })
 </script>
 
 
