--- a/a-propos.html
+++ b/a-propos.html
@@ -12,7 +12,7 @@
 <header>
     <nav>
         <div class="logo">Mon Portfolio</div>
-        <ul>
+        <ul class="nav-links">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="a-propos.html">À propos</a></li>
           <li><a href="competence.html">Compétences</a></li>
