--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-links">
               <li><a href="index.html">Accueil</a></li>
               <li><a href="a-propos.html">À propos</a></li>
               <li><a href="competence.html">Compétences</a></li>
