--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <nav>
+            <div class="logo">Mon Portfolio</div>
             <ul class="nav-links">
               <li><a href="index.html">Accueil</a></li>
               <li><a href="a-propos.html">À propos</a></li>
