--- a/projets.html
+++ b/projets.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <nav>
+            <div class="logo">Mon Portfolio</div>
             <ul class="nav-links">
               <li><a href="index.html">Accueil</a></li>
               <li><a href="a-propos.html">À propos</a></li>
