--- a/index.html
+++ b/index.html
@@ -33,20 +33,23 @@
               <a href="CV_2025-04-08_Houleymatou_CAMARA.pdf" alt="menuHamburger" download="Mon_CV.pdf" class="cv">Télécharger mon CV</a></p>
           </div>
       </section>
-      <h1>Pourquoi travailler avec moi </h1>
+            <h1>Pourquoi travailler avec moi </h1>
       <section id="container">
-        <div class = "element1">
-          <h1>Dynamique et Innovente</h1>
-          <p>Expérience académique en Next.js, React.js, HTML.</p>
+        <div class="grande-boite">
+          <div class = "element1">
+            <h1>Dynamique et Innovente</h1>
+            <p>Expérience académique en Next.js, React.js, HTML.</p>
+          </div>
+          <div class = "element2">
+            <h1>✨ Créativité et Conception</h1>
+            <p>Passionnée par la conception d'interfaces innovantes et interactives, je veille à offrir des expériences utilisateurs engageantes.</p>
+          </div>
+          <div class = "element3">
+            <h1>🎯 Capacité d'Adaptation</h1>
+            <p>Mes diverses expériences professionnelles témoignent de ma capacité à apprendre rapidement et à m'adapter à différents environnements.</p>
+          </div>
         </div>
-        <div class = "element2">
-          <h1>✨ Créativité et Conception</h1>
-          <p>Passionnée par la conception d'interfaces innovantes et interactives, je veille à offrir des expériences utilisateurs engageantes.</p>
-        </div>
-        <div class = "element3">
-          <h1>🎯 Capacité d'Adaptation</h1>
-          <p>Mes diverses expériences professionnelles témoignent de ma capacité à apprendre rapidement et à m'adapter à différents environnements.</p>
-        </div>
+
       </section>
   </main>
 
