--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a href="CV_2025-04-08_Houleymatou_CAMARA.pdf" alt="menuHamburger" download="Mon_CV.pdf" class="cv">Télécharger mon CV</a></p>
           </div>
       </section>
-            <h1>Pourquoi travailler avec moi </h1>
+            <h1>Pourquoi travailler avec moi ? </h1>
       
         <div class="grande-boite">
           <div class = "element1">
