--- a/projets.html
+++ b/projets.html
@@ -40,6 +40,13 @@
                 <p>Développement d'un jeu de réflexion cohérent à déplacer des disques de différents diamètres, technologie utilisée : Python.<br>
                 <a href="https://github.com/Camarah2000/Tour-hanoi" download="projet" class="projet">Voir le Code</a> </p>
             </div>
+            <div claa="element3">
+              
+              <img src="Capture_projet_UML.GIF" alt="mysql Logo" title="mysql"/>
+              <p>Mise en place d'une base de données pour assurer le suivi et la gestion des emprunts de matériel au sein d’un comité d’entreprise.</p>
+              <a href="https://github.com/Camarah2000/Tour-hanoi" download="projet" class="projet">Voir le Code</a> </p>
+
+            </div>
 
         
 
