--- a/a-propos.html
+++ b/a-propos.html
@@ -33,11 +33,11 @@
             <div class="contener">
                <!--<img src="IMG_9476.jpeg" alt="Description de l'image" width="300" class="photo">-->
                 <p>
-                Je suis <strong> Houleymatou Camara</strong>, étudiante en Licence 2 <strong>Informatique et Mathématiques Appliquées à la Gestion des Entreprises à l'Université de Grenoble Alpes (UGA)</strong>.<br>
+                Je suis <strong> Houleymatou Camara</strong>, étudiante en Licence 3 <strong>Informatique et Mathématiques Appliquées à la Gestion des Entreprises à l'Université de Grenoble Alpes (UGA)</strong>.<br>
 
                 Passionnée par le <strong>développement logiciel</strong>, j'ai acquis des compétences en <strong>Python, C,HTML,CSS,javascript,PHP,React.js,SQL, </strong> permettant de concevoir des applications performantes et d'optimiser les systèmes.<br>
 
-                Actuellement, je suis à la recherche d'un <strong>stage </strong> dans le domaine du développement logiciel afin de mettre en pratique mes compétences et approfondir mon expertise.<br>
+                Actuellement, je suis à la recherche d'une <strong>alternance </strong> dans le domaine du développement logiciel afin de mettre en pratique mes compétences et approfondir mon expertise.<br>
 
                 <a href="projets.html" download="Mon_CV.pdf" class="cv">Voir mes projets</a> </p>
     
