--- a/projets.html
+++ b/projets.html
@@ -30,9 +30,10 @@
         <div class="container">
             
             <div class="element1">
-                <h1>Programmation d'un interpreteur</h1>
-                    <p> Programmation d'un interpréteur d'expressions arithmétiques, technologie utilisée : le C.</p>
-                    <P>En cours</P>
+                <img src="image interpreteur.GIF" alt="mysql Logo" title="mysql"/>
+                    <h1>Programmation d'un interpreteur</h1>
+                        <p> Programmation d'un interpréteur d'expressions arithmétiques, technologie utilisée : le C.</p>
+                        <P>En cours</P>
             </div>
             <div class="element2">
                 <img src="Tower_of_Hanoi_4.gif" alt="mysql Logo" title="mysql"/>
