--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <section id="accueil">
           <h1>HOULEYMATOU CAMARA</h1>
           <div class="contener">
-              <p>Passionnée par le <strong>développement de logiciels et le développement web,</strong> je m'efforce d'acquérir une maîtrise approfondie des technologies modernes telles que <strong>React.js, Next.js et Tailwind CSS.</strong>
-              Mon objectif est de concevoir des solutions innovantes, performantes et intuitives pour répondre aux besoins des utilisateurs.
+              <p>Passionnée par le <strong>développement de logiciels, le développement web et l'architecture des données</strong>, je m'efforce d'acquérir une maîtrise approfondie des technologies modernes telles que <strong>React.js, Next.js et Tailwind CSS</strong>.  
+Mon objectif est de concevoir des solutions innovantes, performantes et intuitives pour répondre aux besoins des utilisateurs.</p>
+
               <br>
               <a href="CV_2025-04-08_Houleymatou_CAMARA.pdf" alt="menuHamburger" download="Mon_CV.pdf" class="cv">Télécharger mon CV</a></p>
           </div>
