--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 Mon objectif est de concevoir des solutions innovantes, performantes et intuitives pour répondre aux besoins des utilisateurs.</p>
 
               <br>
-              <a href="CV_2025-04-08_Houleymatou_CAMARA.pdf" alt="menuHamburger" download="Mon_CV.pdf" class="cv">Télécharger mon CV</a></p>
+              <a href="" alt="menuHamburger" download="Mon_CV.pdf" class="cv">Télécharger mon CV</a></p>
           </div>
       </section>
             <h1>Pourquoi travailler avec moi ? </h1>
